# Playground

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
apps/api/: main.py
apps/web/: dashboard.py
apps/worker/: jobs.py  scheduler.py
docs/: 实现说明.md  计划版本.md
infra/: docker-compose.yml
skills/fund-sentiment-trading-planner/: SKILL.md
skills/fund-sentiment-trading-planner/agents/: openai.yaml
skills/fund-sentiment-trading-planner/references/: backtest-eval.md  implementation-summary.md  recommendation-template.md  signal-schema.md  source-onboarding.md
skills/fund-sentiment-trading-planner/scripts/: generate_daily_report.py  normalize_sources.py  score_signal.py
tests/: test_api_backtest_error.py  test_api_flow.py  test_backtest_live_mode.py  test_decision.py  test_fund_management.py  test_ingest.py  test_llm_assist.py  test_market_data.py  test_repository.py  test_sources_factory.py
